// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.ToggleFavoriteChannel should match snapshot for favorite channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Remove from Favorites"
/>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.ToggleFavoriteChannel should match snapshot for not favorite channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Add to Favorites"
/>
`;
